--- a/software/index.html
+++ b/software/index.html
@@ -16,21 +16,21 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/foundation.min.css">
     <title>ソフトウェア - yokaze.github.io</title>
     
-<meta name="description" content="各種自作ソフトを公開します。鋭意作成中。 python-multi-array https://github.com/yokaze/python-multi-array python から boost::multi_array を使うためのライブラリです。 Python と C&#43;&#43; 拡張ライブラリの間で多次元配列を簡単に受け渡しできます">
+<meta name="description" content="各種自作ソフトを公開します。鋭意作成中。 pyscience11 https://github.com/yokaze/pyscience11 C&#43;&#43; から NumPy, SciPy, Matplotlib にアクセスするためのライブラリです。 pybind11 と組み合わせて使うことができます。 python-multi-array https://github.com/yokaze/python-multi-array python から boost::multi_array">
 
 <meta property="og:title" content="ソフトウェア - yokaze.github.io">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://yokaze.github.io/software/">
 <meta property="og:image" content="https://yokaze.github.io/images/default.png">
 <meta property="og:site_name" content="yokaze.github.io">
-<meta property="og:description" content="各種自作ソフトを公開します。鋭意作成中。 python-multi-array https://github.com/yokaze/python-multi-array python から boost::multi_array を使うためのライブラリです。 Python と C&#43;&#43; 拡張ライブラリの間で多次元配列を簡単に受け渡しできます">
+<meta property="og:description" content="各種自作ソフトを公開します。鋭意作成中。 pyscience11 https://github.com/yokaze/pyscience11 C&#43;&#43; から NumPy, SciPy, Matplotlib にアクセスするためのライブラリです。 pybind11 と組み合わせて使うことができます。 python-multi-array https://github.com/yokaze/python-multi-array python から boost::multi_array">
 <meta property="og:locale" content="ja_JP">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="yokaze.github.io">
 <meta name="twitter:url" content="https://yokaze.github.io/software/">
 <meta name="twitter:title" content="ソフトウェア - yokaze.github.io">
-<meta name="twitter:description" content="各種自作ソフトを公開します。鋭意作成中。 python-multi-array https://github.com/yokaze/python-multi-array python から boost::multi_array を使うためのライブラリです。 Python と C&#43;&#43; 拡張ライブラリの間で多次元配列を簡単に受け渡しできます">
+<meta name="twitter:description" content="各種自作ソフトを公開します。鋭意作成中。 pyscience11 https://github.com/yokaze/pyscience11 C&#43;&#43; から NumPy, SciPy, Matplotlib にアクセスするためのライブラリです。 pybind11 と組み合わせて使うことができます。 python-multi-array https://github.com/yokaze/python-multi-array python から boost::multi_array">
 <meta name="twitter:image" content="https://yokaze.github.io/images/default.png">
 
 
@@ -65,7 +65,7 @@
         "height": 60
       }
     },
-    "description": "各種自作ソフトを公開します。鋭意作成中。 python-multi-array https://github.com/yokaze/python-multi-array python から boost::multi_array を使うためのライブラリです。 Python と C++ 拡張ライブラリの間で多次元配列を簡単に受け渡しできます"
+    "description": "各種自作ソフトを公開します。鋭意作成中。 pyscience11 https://github.com/yokaze/pyscience11 C++ から NumPy, SciPy, Matplotlib にアクセスするためのライブラリです。 pybind11 と組み合わせて使うことができます。 python-multi-array https://github.com/yokaze/python-multi-array python から boost::multi_array"
   }
 </script>
 
@@ -155,6 +155,13 @@ ga('send', 'pageview');
   <div class="article-body">
 
 <p>各種自作ソフトを公開します。鋭意作成中。</p>
+
+<h2 id="pyscience11">pyscience11</h2>
+
+<p><a href="https://github.com/yokaze/pyscience11">https://github.com/yokaze/pyscience11</a></p>
+
+<p>C++ から NumPy, SciPy, Matplotlib にアクセスするためのライブラリです。
+pybind11 と組み合わせて使うことができます。</p>
 
 <h2 id="python-multi-array">python-multi-array</h2>
 
