--- a/about/index.html
+++ b/about/index.html
@@ -16,21 +16,21 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/foundation.min.css">
     <title>About - yokaze.github.io</title>
     
-<meta name="description" content="Rue Yokaze アセンブラから JavaScript までなんでもやります。 https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue">
+<meta name="description" content="夜風 流雨 (Rue Yokaze) 都内でソフトウェアを開発しながら写真を撮っています。 SNS https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue https://www.instagram.com/chrofieyue Equipment FUJIFILM X-T2 Touit 12mm F2.8 XF35mm F1.4 XF56mm F1.2 XF80mm F2.8 Macro XF18-55mm F2.8-4 XF55-200mm F3.5-4.8 FUJIFILM X-T2, XF80mm F2.8 R LM OIS WR Macro, 1/640, F4, ISO200 @ 箱根湿">
 
 <meta property="og:title" content="About - yokaze.github.io">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://yokaze.github.io/about/">
 <meta property="og:image" content="https://yokaze.github.io/images/default.png">
 <meta property="og:site_name" content="yokaze.github.io">
-<meta property="og:description" content="Rue Yokaze アセンブラから JavaScript までなんでもやります。 https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue">
+<meta property="og:description" content="夜風 流雨 (Rue Yokaze) 都内でソフトウェアを開発しながら写真を撮っています。 SNS https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue https://www.instagram.com/chrofieyue Equipment FUJIFILM X-T2 Touit 12mm F2.8 XF35mm F1.4 XF56mm F1.2 XF80mm F2.8 Macro XF18-55mm F2.8-4 XF55-200mm F3.5-4.8 FUJIFILM X-T2, XF80mm F2.8 R LM OIS WR Macro, 1/640, F4, ISO200 @ 箱根湿">
 <meta property="og:locale" content="ja_JP">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="yokaze.github.io">
 <meta name="twitter:url" content="https://yokaze.github.io/about/">
 <meta name="twitter:title" content="About - yokaze.github.io">
-<meta name="twitter:description" content="Rue Yokaze アセンブラから JavaScript までなんでもやります。 https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue">
+<meta name="twitter:description" content="夜風 流雨 (Rue Yokaze) 都内でソフトウェアを開発しながら写真を撮っています。 SNS https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue https://www.instagram.com/chrofieyue Equipment FUJIFILM X-T2 Touit 12mm F2.8 XF35mm F1.4 XF56mm F1.2 XF80mm F2.8 Macro XF18-55mm F2.8-4 XF55-200mm F3.5-4.8 FUJIFILM X-T2, XF80mm F2.8 R LM OIS WR Macro, 1/640, F4, ISO200 @ 箱根湿">
 <meta name="twitter:image" content="https://yokaze.github.io/images/default.png">
 
 
@@ -65,7 +65,7 @@
         "height": 60
       }
     },
-    "description": "Rue Yokaze アセンブラから JavaScript までなんでもやります。 https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue"
+    "description": "夜風 流雨 (Rue Yokaze) 都内でソフトウェアを開発しながら写真を撮っています。 SNS https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue https://www.instagram.com/chrofieyue Equipment FUJIFILM X-T2 Touit 12mm F2.8 XF35mm F1.4 XF56mm F1.2 XF80mm F2.8 Macro XF18-55mm F2.8-4 XF55-200mm F3.5-4.8 FUJIFILM X-T2, XF80mm F2.8 R LM OIS WR Macro, 1/640, F4, ISO200 @ 箱根湿"
   }
 </script>
 
@@ -155,15 +155,43 @@ if (!doNotTrack) {
 
   
 
-  <div class="article-body"><p>Rue Yokaze</p>
+  <div class="article-body">
 
-<p>アセンブラから JavaScript までなんでもやります。</p>
+<p>夜風 流雨 (Rue Yokaze)</p>
+
+<p>都内でソフトウェアを開発しながら写真を撮っています。</p>
+
+<h4 id="sns">SNS</h4>
 
 <ul>
 <li><a href="https://twitter.com/chrofieyue">https://twitter.com/chrofieyue</a></li>
 <li><a href="https://github.com/yokaze">https://github.com/yokaze</a></li>
 <li><a href="https://www.flickr.com/photos/chrofieyue">https://www.flickr.com/photos/chrofieyue</a></li>
+<li><a href="https://www.instagram.com/chrofieyue">https://www.instagram.com/chrofieyue</a></li>
 </ul>
+
+<h4 id="equipment">Equipment</h4>
+
+<ul>
+<li>FUJIFILM X-T2
+
+<ul>
+<li>Touit 12mm F2.8</li>
+<li>XF35mm F1.4</li>
+<li>XF56mm F1.2</li>
+<li>XF80mm F2.8 Macro</li>
+<li>XF18-55mm F2.8-4</li>
+<li>XF55-200mm F3.5-4.8</li>
+</ul></li>
+</ul>
+
+<p><div>
+<a data-flickr-embed="true" href="https://www.flickr.com/photos/chrofieyue/41462581770/in/datetaken-public/" title="ヌマトラノオ（沼虎の尾）"><img src="https://farm2.staticflickr.com/1822/41462581770_6b9171d2c6_b.jpg" width="100%" alt="ヌマトラノオ（沼虎の尾）"></a>
+<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+<span style="font-size: 15px;">
+FUJIFILM X-T2, XF80mm F2.8 R LM OIS WR Macro, 1/640, F4, ISO200 @ 箱根湿生花園
+</span>
+</div></p>
 </div>
  
   <br />
@@ -234,8 +262,16 @@ if (!doNotTrack) {
   </section>
   
 
-</aside>
+  <section class="panel panel-default">
+    <div class="panel-heading">
+      <div class="panel-title">AUTHOR</div>
+    </div>
+    <div class="list-group">
+      <a href="https://yokaze.github.io//about/" class="list-group-item">Rue Yokaze&ensp;<i class="fa fa-camera-retro" aria-hidden="true"></i></a>
+    </div>
+  </section>
 
+</aside>
 
   </div>
 </div>
