--- a/about/index.html
+++ b/about/index.html
@@ -16,21 +16,21 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/foundation.min.css">
     <title>About - yokaze.github.io</title>
     
-<meta name="description" content="夜風 流雨 (Rue Yokaze) 都内でソフトウェアを開発しながら写真を撮っています。 バイナリエディタ Sirius https://github.com/yokaze/sirius SNS https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue https://www.instagram.com/chrofieyue Equipment FUJIFILM X-T2 Touit 12mm F2.8 XF16mm F1.4 XF23mm F1.4 XF35mm F1.4 XF56mm F1.2 XF80mm F2.8 Macro XF18-55mm F2.8-4 XF55-200mm F3.5-4.8 FUJIFILM X-T2,">
+<meta name="description" content="夜風 流雨 (Rue Yokaze) 都内でソフトウェアを開発しながら写真を撮っています。 SNS https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue https://www.instagram.com/chrofieyue Equipment FUJIFILM X-T2 Touit 12mm F2.8 XF16mm F1.4 XF23mm F1.4 XF35mm F1.4 XF56mm F1.2 XF80mm F2.8 Macro XF18-55mm F2.8-4 XF55-200mm F3.5-4.8 FUJIFILM X-T2, XF80mm F2.8 R LM OIS WR Macro, 1/640, F4, ISO200">
 
 <meta property="og:title" content="About - yokaze.github.io">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://yokaze.github.io/about/">
 <meta property="og:image" content="https://yokaze.github.io/images/default.png">
 <meta property="og:site_name" content="yokaze.github.io">
-<meta property="og:description" content="夜風 流雨 (Rue Yokaze) 都内でソフトウェアを開発しながら写真を撮っています。 バイナリエディタ Sirius https://github.com/yokaze/sirius SNS https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue https://www.instagram.com/chrofieyue Equipment FUJIFILM X-T2 Touit 12mm F2.8 XF16mm F1.4 XF23mm F1.4 XF35mm F1.4 XF56mm F1.2 XF80mm F2.8 Macro XF18-55mm F2.8-4 XF55-200mm F3.5-4.8 FUJIFILM X-T2,">
+<meta property="og:description" content="夜風 流雨 (Rue Yokaze) 都内でソフトウェアを開発しながら写真を撮っています。 SNS https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue https://www.instagram.com/chrofieyue Equipment FUJIFILM X-T2 Touit 12mm F2.8 XF16mm F1.4 XF23mm F1.4 XF35mm F1.4 XF56mm F1.2 XF80mm F2.8 Macro XF18-55mm F2.8-4 XF55-200mm F3.5-4.8 FUJIFILM X-T2, XF80mm F2.8 R LM OIS WR Macro, 1/640, F4, ISO200">
 <meta property="og:locale" content="ja_JP">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="yokaze.github.io">
 <meta name="twitter:url" content="https://yokaze.github.io/about/">
 <meta name="twitter:title" content="About - yokaze.github.io">
-<meta name="twitter:description" content="夜風 流雨 (Rue Yokaze) 都内でソフトウェアを開発しながら写真を撮っています。 バイナリエディタ Sirius https://github.com/yokaze/sirius SNS https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue https://www.instagram.com/chrofieyue Equipment FUJIFILM X-T2 Touit 12mm F2.8 XF16mm F1.4 XF23mm F1.4 XF35mm F1.4 XF56mm F1.2 XF80mm F2.8 Macro XF18-55mm F2.8-4 XF55-200mm F3.5-4.8 FUJIFILM X-T2,">
+<meta name="twitter:description" content="夜風 流雨 (Rue Yokaze) 都内でソフトウェアを開発しながら写真を撮っています。 SNS https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue https://www.instagram.com/chrofieyue Equipment FUJIFILM X-T2 Touit 12mm F2.8 XF16mm F1.4 XF23mm F1.4 XF35mm F1.4 XF56mm F1.2 XF80mm F2.8 Macro XF18-55mm F2.8-4 XF55-200mm F3.5-4.8 FUJIFILM X-T2, XF80mm F2.8 R LM OIS WR Macro, 1/640, F4, ISO200">
 <meta name="twitter:image" content="https://yokaze.github.io/images/default.png">
 
 
@@ -65,7 +65,7 @@
         "height": 60
       }
     },
-    "description": "夜風 流雨 (Rue Yokaze) 都内でソフトウェアを開発しながら写真を撮っています。 バイナリエディタ Sirius https://github.com/yokaze/sirius SNS https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue https://www.instagram.com/chrofieyue Equipment FUJIFILM X-T2 Touit 12mm F2.8 XF16mm F1.4 XF23mm F1.4 XF35mm F1.4 XF56mm F1.2 XF80mm F2.8 Macro XF18-55mm F2.8-4 XF55-200mm F3.5-4.8 FUJIFILM X-T2,"
+    "description": "夜風 流雨 (Rue Yokaze) 都内でソフトウェアを開発しながら写真を撮っています。 SNS https://twitter.com/chrofieyue https://github.com/yokaze https://www.flickr.com/photos/chrofieyue https://www.instagram.com/chrofieyue Equipment FUJIFILM X-T2 Touit 12mm F2.8 XF16mm F1.4 XF23mm F1.4 XF35mm F1.4 XF56mm F1.2 XF80mm F2.8 Macro XF18-55mm F2.8-4 XF55-200mm F3.5-4.8 FUJIFILM X-T2, XF80mm F2.8 R LM OIS WR Macro, 1/640, F4, ISO200"
   }
 </script>
 
@@ -160,12 +160,6 @@ if (!doNotTrack) {
 <p>夜風 流雨 (Rue Yokaze)</p>
 
 <p>都内でソフトウェアを開発しながら写真を撮っています。</p>
-
-<h4 id="バイナリエディタ-sirius">バイナリエディタ Sirius</h4>
-
-<ul>
-<li><a href="https://github.com/yokaze/sirius">https://github.com/yokaze/sirius</a></li>
-</ul>
 
 <h4 id="sns">SNS</h4>
 
